--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@types/jest": "^23.3.1",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.3.0",
     "antd": "^3.8.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.17.0",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
     "typescript": "^3.0.1"
   },
   "scripts": {
