--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts-ts": "2.17.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
+    "redux-saga": "^0.16.0",
     "typescript": "^3.0.1"
   },
   "scripts": {
